--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -182,7 +182,7 @@ html {
   height: 100%;
 }
 code {
-  background-color: white;
+   background-color: white;
   border: 1px solid #ccc;
   padding: 1px 5px;
   color: #888;
@@ -212,7 +212,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to your Django application on OpenShift</h1>
+            <h1>Welcome to your AWSOME AI Django application on OpenShift</h1>
           </hgroup>
 
 
