--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -212,7 +212,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to your AWSOME AI Django application on OpenShift</h1>
+            <h1>Welcome to your AWSOME AI Django application on OpenShift 20180515</h1>
           </hgroup>
 
 
